--- a/webuno.html
+++ b/webuno.html
@@ -7,6 +7,7 @@
     <body>
         <div>
             <h1>Holo</h1>
+            <h2>SIGUIENTE CURSO, GIT Y GITHUB</h2>
         </div>
     </body>
 </html>
